--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,27 @@
 language: node_js
 
 node_js:
+  - "12"
   - "11"
   - "10"
   - "8"
-  - "6"
 
 cache: npm
 
-branches:
-  except:
-    - elm
-
 before_install:
   - printf "@fortawesome:registry=https://npm.fontawesome.com/\n//npm.fontawesome.com/:_authToken=${NPM_TOKEN}" >> .npmrc
+
+deploy:
+  - provider: script
+    script: sh ${TRAVIS_BUILD_DIR}/deploy/deploy.sh
+    skip_cleanup: true
+    on:
+      branch: master
+      node: "12"
+
+  - provider: script
+    script: sh ${TRAVIS_BUILD_DIR}/deploy/deploy-tag.sh
+    skip_cleanup: true
+    on:
+      tags: true
+      node: "12"
