--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elm-fontawesome-generator",
-  "version": "4.1.0",
+  "version": "4.2.0",
   "description": "Generate elm modules for FontAwesome icons.",
   "main": "src/elm-fontawesome.js",
   "author": "Gareth Latty <gareth@lattyware.co.uk>",
@@ -14,39 +14,39 @@
     "post-build": "cp -r resources/. dist && cp .gitignore dist"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "common-tags": "^1.8.0",
-    "core-js": "^3.4.8",
-    "elm-format": "^0.8.2",
-    "fs-extra": "^8.1.0",
-    "loader-utils": "^1.2.3",
+    "core-js": "^3.6.5",
+    "elm-format": "^0.8.3",
+    "fs-extra": "^9.0.0",
+    "loader-utils": "^2.0.0",
     "make-promises-safe": "^5.1.0",
-    "prettier-plugin-elm": "^0.5.0",
-    "regenerator-runtime": "^0.13.3",
-    "schema-utils": "^2.6.1",
-    "source-map-support": "^0.5.16"
+    "regenerator-runtime": "^0.13.5",
+    "schema-utils": "^2.6.6",
+    "source-map-support": "^0.5.19"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-proposal-throw-expressions": "^7.7.4",
-    "@babel/plugin-proposal-unicode-property-regex": "^7.7.4",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/register": "^7.7.4",
-    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-throw-expressions": "^7.8.3",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.8.8",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.9.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-transform-util-promisify": "^0.2.2",
     "elm": "^0.19.1-3",
-    "mocha": "^6.2.2",
-    "prettier": "^1.19.1"
+    "mocha": "^7.1.2",
+    "prettier": "^2.0.5",
+    "prettier-plugin-elm": "^0.7.0"
   },
   "optionalDependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.12.0",
-    "@fortawesome/free-regular-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/pro-duotone-svg-icons": "^5.12.0",
-    "@fortawesome/pro-light-svg-icons": "^5.12.0",
-    "@fortawesome/pro-regular-svg-icons": "^5.12.0",
-    "@fortawesome/pro-solid-svg-icons": "^5.12.0"
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/pro-duotone-svg-icons": "^5.13.0",
+    "@fortawesome/pro-light-svg-icons": "^5.13.0",
+    "@fortawesome/pro-regular-svg-icons": "^5.13.0",
+    "@fortawesome/pro-solid-svg-icons": "^5.13.0"
   },
   "browserslist": [
     "maintained node versions"
