Upgrade to FontAwesome 6.5.1  - Update config files to more consistent format.  - Update dependencies.  - Move to elm-tooling.  - Update readme to fix broken shields.  - Update workflows.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
     "sourceMap": true,
     "rootDir": "src",
     "outDir": "dist/generator",
-    "composite": true,
     "removeComments": true,
     "newLine": "lf",
 
@@ -21,13 +20,12 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "allowUnusedLabels": false,
-    "exactOptionalPropertyTypes": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
-    "importsNotUsedAsValues": "error",
-    "checkJs": true
+    "verbatimModuleSyntax": true,
+    "isolatedModules": true
   }
 }
