--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ on:
     tags:
       - "*.*.*"
 
+env:
+  GIT_TAG_NAME: ${{ github.ref_type == 'tag' && github.ref_name || '' }}
+
 jobs:
   build:
     name: Build
@@ -17,26 +20,23 @@ jobs:
 
     steps:
       - name: Checkout elm-fontawesome-generator repository.
-        uses: actions/checkout@v3
-
-      - name: Get version from tag.
-        uses: little-core-labs/get-git-tag@v3.0.2
+        uses: actions/checkout@v4
 
       - name: Setup buildx.
         uses: docker/setup-buildx-action@v2
 
       - name: Build library.
-        uses: docker/bake-action@v2
+        uses: docker/bake-action@v4
         env:
           ELM_FONTAWESOME_VERSION: ${{ env.GIT_TAG_NAME }}
 
       - name: Ensure example builds.
-        uses: docker/bake-action@v2
+        uses: docker/bake-action@v4
         with:
           targets: example
 
       - name: Checkout elm-fontawesome repository.
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: "lattyware/elm-fontawesome"
           ssh-key: ${{ secrets.LIB_DEPLOY_KEY }}
