--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elm-fontawesome-generator",
-  "version": "6.0.0",
+  "version": "7.0.0",
   "description": "Generate elm modules for FontAwesome icons.",
   "author": "Gareth Latty <gareth@lattyware.co.uk>",
   "license": "GPL-3.0-or-later",
@@ -24,39 +24,39 @@
     }
   },
   "engines": {
-    "node": ">=18.0.0 <19.0.0"
+    "node": ">=21.0.0 <22.0.0"
   },
   "scripts": {
+    "postinstall": "npx elm-tooling install",
     "clean": "rm -rf dist",
-    "prebuild": "rm -rf dist/generator",
+    "prebuild": "rm -rf dist/generator && npx elm-tooling install",
     "build": "npx tsc",
     "pregenerate": "npm run build && rm -rf dist/lib",
-    "generate": "node dist/generator/cli.js",
+    "generate": "node --enable-source-maps dist/generator/cli.js",
     "predocker:generate": "rm -rf dist/lib",
     "docker:generate": "docker buildx bake",
     "predocker:example:generate": "rm -rf dist/example",
     "docker:example:generate": "docker buildx bake example"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "elm": "^0.19.1-5",
-    "elm-format": "^0.8.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "elm-tooling": "^1.14.1",
     "loglevel": "^1.8.0"
   },
   "devDependencies": {
-    "@types/node": "^18.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
+    "@types/node": "^20.11.17",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.15.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "prettier": "2.7.1",
-    "prettier-plugin-elm": "^0.8.0",
-    "typescript": "^4.8.0-dev.20220516"
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^11.0.0",
+    "prettier": "3.2.5",
+    "prettier-plugin-elm": "^0.11.0",
+    "typescript": "^5.3.3"
   },
   "optionalDependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1"
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1"
   }
 }
