--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     }
   },
   "engines": {
-    "node": ">=21.0.0 <22.0.0"
+    "node": ">=22.0.0 <23.0.0"
   },
   "scripts": {
     "postinstall": "npx elm-tooling install",
@@ -44,19 +44,24 @@
     "loglevel": "^1.8.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@types/node": "^20.11.17",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.15.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-simple-import-sort": "^11.0.0",
+    "eslint": "^9.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "prettier": "3.2.5",
     "prettier-plugin-elm": "^0.11.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.9.0"
   },
   "optionalDependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1"
+  },
+  "overrides": {
+    "typescript-eslint": {
+      "eslint": "^9.3.0"
+    }
   }
 }
