--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
   "include": ["src/**/*"],
 
   "compilerOptions": {
-    "lib": ["es2022"],
+    "lib": ["esnext"],
     "module": "nodenext",
-    "target": "es2022",
+    "target": "esnext",
     "moduleResolution": "nodenext",
 
     "sourceMap": true,
@@ -15,6 +15,8 @@
     "removeComments": true,
     "newLine": "lf",
 
+    "experimentalDecorators": true,
+   
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -26,6 +28,10 @@
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
     "verbatimModuleSyntax": true,
+    "allowUnreachableCode": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "preserveConstEnums": true,
     "isolatedModules": true
   }
 }
