--- a/base/.github/workflows/publish.yml
+++ b/base/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up elm.
         uses: jorelali/setup-elm@v5
         with:
-          elm-version: 0.19.1
+          elm-version: 0.19.0 #0.19.1 # Older version due to bug in latest: https://github.com/elm/compiler/issues/2171
 
       - name: Publish package.
         run: elm publish
@@ -45,15 +45,6 @@ jobs:
       - name: Setup buildx.
         uses: docker/setup-buildx-action@v2
 
-      - name: Set up elm.
-        uses: jorelali/setup-elm@v5
-        with:
-          elm-version: 0.19.1
-
-      - name: Install the package.
-        run: |
-          echo Y | elm install "lattyware/elm-fontawesome"
-
       - name: Build example.
         uses: docker/bake-action@v4
         with:
@@ -69,7 +60,7 @@ jobs:
       - name: Checkout elm-fontawesome-example repository.
         uses: actions/checkout@v4
         with:
-          repository: "lattyware/elm-fontawesome"
+          repository: "lattyware/elm-fontawesome-example"
           ssh-key: ${{ secrets.EXAMPLE_DEPLOY_KEY }}
           path: "publish"
 
@@ -96,7 +87,7 @@ jobs:
       - name: Checkout elm-fontawesome-example pages repository.
         uses: actions/checkout@v4
         with:
-          repository: "lattyware/elm-fontawesome"
+          repository: "lattyware/elm-fontawesome-example"
           ssh-key: ${{ secrets.EXAMPLE_DEPLOY_KEY }}
           ref: "gh-pages"
           path: "pages"
